--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <p><a href="#">High to Low</a></p>
       </div>
         
-      <div class="col-md-9 p-3 bg-light">
+      <div class="col-md-9 p-3" style="background-color : grey";>
         <div class="row">
           <div class="col-md-3">
             <div class="card" style="width: 100%;">
