--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               </li>
 
               <li class="nav-item">
-                <a style="color: black;" class="nav-link" href="register.html">Rgister</a>
+                <a style="color: black;" class="nav-link" href="register.html">Register</a>
               </li>
 
               <li class="nav-item">
