--- a/login.html
+++ b/login.html
@@ -38,7 +38,7 @@
         </div>
     </div>
 
-    <script src="staic/js/bootstrap.min.js"></script>
-    <script src="staic/js/popper.js"></script>
+    <script src="static/js/bootstrap.min.js"></script>
+    <script src="static/js/popper.js"></script>
 </body>
 </html>
