--- a/placeorder.html
+++ b/placeorder.html
@@ -139,8 +139,8 @@
 
 </div>
 
-  <script src="staic/js/bootstrap.min.js"></script>
-  <script src="staic/js/popper.js"></script>
+  <script src="static/js/bootstrap.min.js"></script>
+  <script src="static/js/popper.js"></script>
       
 </body>
 </html>
