--- a/register.html
+++ b/register.html
@@ -51,8 +51,8 @@
 
 
 
-    <script src="staic/js/bootstrap.min.js"></script>
-    <script src="staic/js/popper.js"></script>
+    <script src="static/js/bootstrap.min.js"></script>
+    <script src="static/js/popper.js"></script>
     
 </body>
 </html>
